[package]
name = "ector-use-after-free"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ector = { version = "0.4.0", default-features = false }
embassy-futures = { version = "0.1.0", default-features = false}

[dependencies.embassy-executor]
git = "https://github.com/embassy-rs/embassy"
tag = "embassy-executor-v0.2.0"
default-features = false
features = ["arch-std", "executor-thread", "nightly", "integrated-timers"]

[dependencies.embassy-sync]
git = "https://github.com/embassy-rs/embassy"
tag = "embassy-sync-v0.2.0"
default-features = false

[dependencies.embassy-time]
git = "https://github.com/embassy-rs/embassy"
rev = "embassy-time-v0.1.1"
default-features = false
features = ["std"]
